# 461Team-daloopy

./: .gitignore  Makefile  README.md  README.txt  api_requests.py  github_urls.txt  gql_request.py  metrics.ndjson  package.rs  rest_api.py  rest_data.txt  run  sample_data.txt  wrapper.py
grrs/: ._URLs.txt  Cargo.toml  Makefile  api.py  log.txt  log_path  output.txt
grrs/src/: gql_request.py  graphql.py  main.rs  metrics.rs  package.rs  requirements.txt  run  test.txt
grrs/src/test/: .coverage  coverage.json  test_api.py  testcases.rs
grrs/src/tests/: testcase.rs
