[package]
name = "metric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"]}