[package]
name = "metric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.93"
pyo3 = { version = "0.18.1", features = ["auto-initialize"] }
ordered-float = "3.4.0"
simple-logging = "2.0.2"
log = "0.4.17"